Giving grad bitwidth as option

--- a/libdataflowring/sim_app/templates/index.html
+++ b/libdataflowring/sim_app/templates/index.html
@@ -68,6 +68,12 @@
                             <option value="16">16</option>
                             <option value="32">32</option>
                         </select>
+			<label for="grad_bitwidth">Grad Bitwidth:</label>
+			<select id="grad_bitwidth" name="grad_bitwidth" required>
+			    <option value="8" selected>8</option>
+			    <option value="16">16</option>
+			    <option value="32">32</option>
+			</select>
                         <label for="total_layers">Total Blocks:</label>
                         <input type="number" id="total_layers" name="total_layers" value="59" min="1" required>
                         <label for="vocab_size">Vocab Size:</label>
